# EMBEDDED-ROADMAP-Advanced

./: README.md
dma/: .cproject  (+1 more)
modular-firmware-architecture/code/: CMakeLists.txt
modular-firmware-architecture/code/app/: main.c
modular-firmware-architecture/code/drivers/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_adc/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_fan/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_flash/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_gpio/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_ldr/: CMakeLists.txt
modular-firmware-architecture/code/drivers/hal_led/: CMakeLists.txt
modular-firmware-architecture/code/middleware/: CMakeLists.txt
modular-firmware-architecture/code/middleware/sensors/: CMakeLists.txt
state-machines-error-handling/: CMakeLists.txt  build.sh
state-machines-error-handling/code/: CMakeLists.txt
state-machines-error-handling/code/app/: CMakeLists.txt  main.c
state-machines-error-handling/code/app/control/: CMakeLists.txt
state-machines-error-handling/code/common/: CMakeLists.txt
state-machines-error-handling/code/common/include/: error_codes.h
state-machines-error-handling/code/drivers/hal_adc/: CMakeLists.txt
state-machines-error-handling/code/drivers/hal_display/: CMakeLists.txt
state-machines-error-handling/code/drivers/hal_fan/: CMakeLists.txt
state-machines-error-handling/code/drivers/hal_flash/: CMakeLists.txt
state-machines-error-handling/new_components/: actuators_cfg.c  sensors_cfg.c
(+192 files in other folders)
